--- a/SocialJournalSwift/SocialJournal/SocialJournal/Info.plist
+++ b/SocialJournalSwift/SocialJournal/SocialJournal/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Would you like to allow this application to access your location?</string>
+	<key>NSLocationAlwaysUsageDescription </key>
+	<string>Would you like to allow this application to access your location?</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
